Added profile bio, past events, and clubs created sections
